@@ -60,6 +60,20 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|request
+operator|.
+name|LocalSolrQueryRequest
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|util
@@ -234,6 +248,108 @@ name|SuppressWarnings
 argument_list|(
 literal|"unchecked"
 argument_list|)
+DECL|method|testRequestParamsAsVariable
+specifier|public
+name|void
+name|testRequestParamsAsVariable
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|List
+name|rows
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|rows
+operator|.
+name|add
+argument_list|(
+name|createMap
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"101"
+argument_list|,
+literal|"desc"
+argument_list|,
+literal|"ApacheSolr"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MockDataSource
+operator|.
+name|setIterator
+argument_list|(
+literal|"select * from books where category='search'"
+argument_list|,
+name|rows
+operator|.
+name|iterator
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|LocalSolrQueryRequest
+name|request
+init|=
+name|lrf
+operator|.
+name|makeRequest
+argument_list|(
+literal|"command"
+argument_list|,
+literal|"full-import"
+argument_list|,
+literal|"debug"
+argument_list|,
+literal|"on"
+argument_list|,
+literal|"clean"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"commit"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"category"
+argument_list|,
+literal|"search"
+argument_list|,
+literal|"dataConfig"
+argument_list|,
+name|requestParamAsVariable
+argument_list|)
+decl_stmt|;
+name|h
+operator|.
+name|query
+argument_list|(
+literal|"/dataimport"
+argument_list|,
+name|request
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"desc:ApacheSolr"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
 DECL|method|testContext
 specifier|public
 name|void
@@ -341,7 +457,31 @@ class|class
 name|MockDataSource2
 extends|extends
 name|MockDataSource
-block|{        }
+block|{    }
+DECL|field|requestParamAsVariable
+specifier|private
+specifier|final
+name|String
+name|requestParamAsVariable
+init|=
+literal|"<dataConfig>\n"
+operator|+
+literal|"<dataSource type=\"MockDataSource\" />\n"
+operator|+
+literal|"<document>\n"
+operator|+
+literal|"<entity name=\"books\" query=\"select * from books where category='${dataimporter.request.category}'\">\n"
+operator|+
+literal|"<field column=\"id\" />\n"
+operator|+
+literal|"<field column=\"desc\" />\n"
+operator|+
+literal|"</entity>\n"
+operator|+
+literal|"</document>\n"
+operator|+
+literal|"</dataConfig>"
+decl_stmt|;
 block|}
 end_class
 
