@@ -34,6 +34,9 @@ Bug Fixes
 1. SOLR-800:  Deep copy collections to avoid ConcurrentModificationException in XPathEntityprocessor while streaming
               (Kyle Morrison, Noble Paul via shalin)
 
+2. SOLR-823:  Request parameter variables ${dataimporter.request.xxx} are not resolved
+              (Mck SembWever, Noble Paul, shalin)
+
 Documentation
 ----------------------
 
